--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'ru.donstu.cloudstorage'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'war'
 
 sourceCompatibility = 1.8
 
@@ -10,6 +11,18 @@ repositories {
 }
 
 dependencies {
+
+    // Java Servlet API
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+
     // jUnit
     testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    /**
+     * Libraries Spring
+     * 1. Core
+     * 2. Web MVC
+     */
+    compile group: 'org.springframework', name: 'spring-core', version: '4.3.3.RELEASE'
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.3.RELEASE'
 }
