--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
 
 dependencies {
 
+    // Log4J
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+
     // Java Servlet API
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 
