--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,19 @@ dependencies {
     // jUnit
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
+    // JDBC PostgreSQL (Driver)
+    compile group: 'org.postgresql', name: 'postgresql', version: '9.4.1211'
+
+    /**
+     * Apache Commons
+     * 1. IO
+     * 2. FileUpload
+     * 3. DBCP
+     */
+    compile group: 'commons-io', name: 'commons-io', version: '2.4'
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.1'
+    compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
+
     /**
      * Thymeleaf
      * 1. Core
@@ -30,11 +43,11 @@ dependencies {
     compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.2.RELEASE'
 
     /**
-     * Libraries Spring
+     * Spring
      * 1. Core
      * 2. Web MVC
-     * 3. Spring ORMRM
-     * 4. Data JPA (Database)
+     * 3. ORM
+     * 4. Data JPA
      * 5. Security Core
      * 6. Security Web
      * 7. Security Config
@@ -48,15 +61,10 @@ dependencies {
     compile group: 'org.springframework.security', name: 'spring-security-config', version: '4.1.3.RELEASE'
 
     /**
-     * Libraries for database
-     * 1. JDBC PostgreSQL
-     * 2. Apache Commons DBCP
-     * 3. Hibernate Core ORM
-     * 4. Hibernate EntityManager
+     * Hibernate
+     * 1. Core ORM
+     * 2. EntityManager
      */
-    compile group: 'org.postgresql', name: 'postgresql', version: '9.4.1211'
-    compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.4.Final'
     compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.2.4.Final'
-
 }
