--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
+#ServerPath
+win.user_files=C:\\test
