Upload and delete file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ datasource.postgresql.password=root
 datasource.dpcp.initialSize=5
 #Hibernate
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-hibernate.show_sql=true
-hibernate.format_sql=true
+hibernate.show_sql=false
+hibernate.format_sql=false
 hibernate.hbm2ddl.auto=update
 #ServerPath
 win.user_files=C:\\test
