--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ hibernate.format_sql=false
 hibernate.hbm2ddl.auto=update
 #ServerPath
 win.user_files=C:\\test
+linux.user_files=/home/vyacheslafka/IdeaProjects/test
